# ResGA

./: LICENSE  README.md  decaymodes.txt  particle_ref.csv  ref.csv
Emulator-fast/: CMakeLists.txt
Emulator-fast/include/: Decays.h
Emulator-fast/src/: Decays.cc  main.cc
pythonScripts/: compare.py  decayFILE.py  emulator.py  experiment_data_loader.py  genetic.py  main.py  plot.py  score.py  stanley_test.py
shellScripts/: genetic.sh
